--- a/myProject/public/css/style.css
+++ b/myProject/public/css/style.css
@@ -1,181 +1,148 @@
-body
-{
-	
-	font-family: 'Oswald', sans-serif;
-
-}
-html
-{
-	scroll-behavior: smooth;
-}
-.head
-{
-	background: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url(../img/t.jpg); 	
-	height:650px;
-	background-size: cover	
-}
-.bg-light 
-{
-    background-color: transparent !important;
-}
-.navbar-light .navbar-nav .nav-link 
-{
-    color: #fff;
-    text-transform: uppercase;
-    padding: 40px;
-}
-.navbar-brand img
-{
-	width: 100px;
-}
-.navbar-light .navbar-nav .active > .nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show > .nav-link 
-{
-    color: #fff;
-}
-.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover 
-{
-    color: red;
+.product-center {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+    gap: 7rem 3rem;
 }
 
-.red
-{
-	background-color: #000 !important;
-    transition: 0.6s;
-    box-shadow: 0px 0px 20px #cccc;
-    height: 100px;
-	
-}
-.bgt h1
-{
-	padding-top: 200px;
-	color: grey;
-	font-size: 50px;
-	position: relative;
-}
-.box
-{
-	position: absolute;
-	background: orange;
-	width: 300px;
-	height: 2px;
-	left: 535px;
-}
-.box2
-{
-	padding-top: 50px;
-	font-size: 20px;
-	color: grey;
-}
-.btn-dark
-{
-	padding: 20px 30px;
-  font-size: 20px;
-  text-transform: uppercase;
-  border-radius: 50px;
-  background:transparent;
-}
-.center
-{
-	background: #f4623a;
-	padding-top: 80px;
-	padding-bottom: 80px;
-	
-	
-}
-.center p
-{
-	padding-top: 20px;
-}
-.box3
-{
-	
-	background: #fff;
-	width: 150px;
-	height: 2px;
-	margin: auto;
-}
-.about
-{
-	padding: 80px 0;
-}
-.box4
-{
-	
-	background: #000;
-	width: 50px;
-	height: 2px;
-	margin: auto;
-	
-}
-.bt i
-{
-	font-size: 100px;
-
-}
-.ct
-{
-	padding: 40px 0;
-}
-.col-md-4 img
-{
-	width: 100%;
-
-}
-.col-md-4 img:hover
-{
-	color: rgba(0,0,0,0.9);
-	transition: 0.2s;
-}
-.contact
-{
-	padding: 200px 0px;
-}
-.box6
-{
-	
-	background: #000;
-	width: 120px;
-	height: 4px;
-	margin: auto;
-}
-.contact p
-{
-	padding:30px;
-	font-size: 20px;
-}
-.contact i
-{
-   font-size: 100px;
-}
-.map iframe
-{
-	width: 100%;
-}
-.row i
-{
-  font-size: 100px;
-}
-.col:hover
-{
-  -ms-transform: scale(0.5); 
-  -webkit-transform: scale(0.5);
-  transform: scale(1.11);
-}
-.col{
-  float: left;
-  width: 25%;
-  padding: 5px;
-  transition: transform .2s;
-  text-align: center;
-}
-.row::after {
-  content: "";
-  clear: both;
-  display: table;
+.container {
+    max-width: 120rem;
+    margin: 0 auto;
 }
 
-@media screen and (max-width: 500px) {
-  .col {
+.product {
+    height: 36rem;
+    background-color: #fff;
+    box-shadow: 0.5rem 0.5rem rgba(0, 0, 0, 0.15);
+    border-radius: 1rem;
+    text-align: center;
+    transition: all 300ms ease-in-out;
+}
+
+.product:hover {
+    box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.25);
+}
+
+.product-header {
+    position: relative;
+    height: 25rem;
+    background-color: #f6f2f1;
+    transition: all 300ms ease-in-out;
+    z-index: 0;
+}
+
+.product-header img {
+    height: 100%;
+}
+
+.icon {
+    color: #8739f9;
+    font-size: 20px;
+    cursor: pointer;
+    display: none;
+}
+
+.product-footer {
+    padding: 2rem 1.6rem 1.6rem 1.6rem;
+}
+
+.product-footer h3 {
+    font-size: 2.2rem;
+}
+
+.product-footer .price {
+    color: #ff7c9c;
+    font-size: 2rem;
+    margin-right: 1rem;
+}
+
+.product-footer .type {
+    margin-bottom: 1px;
+}
+
+.product:hover .product-header::after {
+    content: "";
+    position: absolute;
     width: 100%;
-  }
+    height: 100%;
+    left: 0;
+    top: 0;
+    border-radius: 1rem 1rem 0 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    transition: all 500ms ease-in-out;
+    z-index: 1;
+}
+
+.product-header .icons,
+.right-icons {
+    position: absolute;
+    right: 5%;
+    top: 50%;
+    z-index: 2;
+    transition: all 500ms ease-in-out;
+}
+
+.product-header .icons {
+    transform: translate(0, -50%) scale(0);
+    opacity: 0;
+}
+
+.product-header .icons li,
+.right-icons {
+    background-color: #fff;
+    font-size: 2rem;
+    display: block;
+    border-radius: 50%;
+    padding: 1.5rem 1.6rem;
+    margin-bottom: 1rem;
+    line-height: 2rem;
+    cursor: pointer;
+    transition: all 300ms ease-in-out;
+}
+
+.product-header .icons li i {
+    transition: all 500ms ease-in-out;
+}
+
+.product-header .icons span:not(:last-child) {
+    margin-bottom: 1rem;
+}
+
+.product-header .icons span:hover {
+    background-color: cyan;
+    color: #fff;
+}
+
+.product:hover .icons,
+.product:hover .right-icons {
+    opacity: 1;
+    transform: translate(0, -50%) scale(1);
+}
+
+.product-header .icons a {
+    display: block;
+    margin-bottom: 1rem;
+}
+
+.title {
+    margin: 5rem 0 3rem 0;
+    text-align: center;
+}
+
+.title h2 {
+    font-size: 3rem;
+    display: inline-block;
+    position: relative;
+    z-index: 0;
+}
+
+.title h2::after {
+    content: "";
+    position: absolute;
+    left: 50%;
+    bottom: -20%;
+    transform: translate(-50%, -50%);
+    background-color: #8739f9;
+    width: 50%;
+    height: 0.3rem;
+    z-index: 1;
 }
